# -wasc-grounded-search-skill

./: .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  SETUP.md  SKILL.md  pyproject.toml
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
benchmark-results/: benchmark-runs.csv  benchmark-runs.jsonl  benchmark-summary.json  impl-comparison-summary.json  wasc-on-wasc1-eval-report.json
scripts/: __init__.py  compare_impls.py  export_judge_packets.py  route_query.py  run_benchmark.py  run_wasc_on_wasc1_eval.py  summarize_judge_scores.py
skill/: __init__.py
tests/: conftest.py  test_academic_live_adapters.py  test_answer_cache.py  test_answer_citation_check.py  test_answer_contracts.py  test_answer_generator.py  test_answer_guardrails.py  test_answer_integration.py  test_answer_runtime_budget.py  test_answer_state_mapping.py  test_api_answer_endpoint.py  test_api_runtime_benchmark.py  test_api_task3.py  test_benchmark_harness.py  test_benchmark_repeatability.py  test_benchmark_reports.py  test_competition_eval_end_to_end.py  test_domain_priority.py  test_env_loading.py  test_evidence_academic.py  test_evidence_dedupe.py  test_evidence_models.py  test_evidence_pack.py  test_evidence_policy.py  test_evidence_runtime_integration.py  test_google_news_live_client.py  test_industry_live_adapter.py  test_industry_page_parsers.py  test_industry_source_split.py  test_intent_task2.py  test_judge_packet_export.py  test_judge_score_report.py  test_live_browser_fetch.py  test_live_http_client.py  test_live_search_discovery.py  test_mixed_candidate_pooling.py  test_mixed_coverage_priority.py  (+12 more)
(+194 files in other folders)
