[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wasc-routing-skill"
version = "0.1.0"
description = "Phase 1 deterministic routing core for WASC search skill"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.12,<3.0",
  "uvicorn>=0.44,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.setuptools]
packages = ["skill"]
