[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wasc-routing-skill"
version = "1.0.0"
description = "Grounded search Skill for WASC competition tasks with live retrieval adapters"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12,<5.0",
  "ddgs>=9.13,<10.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic>=2.12,<3.0",
  "playwright>=1.51,<2.0",
  "uvicorn>=0.44,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.setuptools]
packages = ["skill"]
